Production/01-02-2025/force-app/main/default/objects/Account/fields/c2g__CODATaxCode2__c.field-meta.xml
<CustomField>
    <fullName>c2g__CODATaxCode2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Code 2</label>
    <referenceTo>c2g__codaTaxCode__c</referenceTo>
    <relationshipLabel>Accounts (Tax Code 2)</relationshipLabel>
    <relationshipName>AccountsTC2</relationshipName>
    <type>Lookup</type>
</CustomField>