Production/01-02-2025/force-app/main/default/objects/Account/fields/c2g__CODATaxpayerIdentificationNumber__c.field-meta.xml
<CustomField>
    <fullName>c2g__CODATaxpayerIdentificationNumber__c</fullName>
    <description>Taxpayer Identification Number</description>
    <label>Taxpayer Identification Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>