Production/01-02-2025/force-app/main/default/objects/Account/fields/c2g__CODAValidatedShippingCity__c.field-meta.xml
<CustomField>
    <fullName>c2g__CODAValidatedShippingCity__c</fullName>
    <label>ValidatedShippingCity</label>
    <length>40</length>
    <type>Text</type>
</CustomField>