Production/01-02-2025/force-app/main/default/objects/Account/fields/Child_Account_Names_in_Eyeota_UI__c.field-meta.xml
<CustomField>
    <fullName>Child_Account_Names_in_Eyeota_UI__c</fullName>
    <label>Child Account Names in Eyeota UI</label>
    <length>250</length>
    <type>Text</type>
</CustomField>