Production/01-02-2025/force-app/main/default/objects/Account/fields/Collect_mobile_device_IDs_IDFA_ADID__c.field-meta.xml
<CustomField>
    <fullName>Collect_mobile_device_IDs_IDFA_ADID__c</fullName>
    <label>Collect mobile device IDs (IDFA, ADID)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>