Production/01-02-2025/force-app/main/default/objects/Account/fields/comScore_Impressions__c.field-meta.xml
<CustomField>
    <fullName>comScore_Impressions__c</fullName>
    <label>comScore Impressions</label>
    <length>20</length>
    <type>Text</type>
</CustomField>