Production/01-02-2025/force-app/main/default/objects/Account/fields/comScore_Uniques__c.field-meta.xml
<CustomField>
    <fullName>comScore_Uniques__c</fullName>
    <label>comScore Uniques</label>
    <length>20</length>
    <type>Text</type>
</CustomField>