Production/01-02-2025/force-app/main/default/objects/Account/fields/Contract_Information_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Contract_Information_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Information Reviewed</label>
    <type>Checkbox</type>
</CustomField>