Production/01-02-2025/force-app/main/default/objects/Account/fields/Contracting_Billing_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Contracting_Billing_Entity_Name__c</fullName>
    <inlineHelpText>Company Name as stated in the contract - this information will be used by Finance for invoicing.</inlineHelpText>
    <label>Contracting/Billing Entity Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>