Production/01-02-2025/force-app/main/default/objects/Account/fields/Data_being_Sent_Bought__c.field-meta.xml
<CustomField>
    <fullName>Data_being_Sent_Bought__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data being Sent/Bought?</label>
    <type>Checkbox</type>
</CustomField>