Production/01-02-2025/force-app/main/default/objects/Account/fields/Data_Category__c.field-meta.xml
<CustomField>
    <fullName>Data_Category__c</fullName>
    <label>Data Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hashed Emails</fullName>
            </value>
            <value>
                <fullName>Branded Data B2B</fullName>
            </value>
            <value>
                <fullName>Branded Data B2C</fullName>
            </value>
            <value>
                <fullName>Demographic - Declared Age</fullName>
            </value>
            <value>
                <fullName>Demographic - Declared Gender</fullName>
            </value>
            <value>
                <fullName>Demographic - First Name/Salutation</fullName>
            </value>
            <value>
                <fullName>Demographic - Income</fullName>
            </value>
            <value>
                <fullName>Demographic - Job</fullName>
            </value>
            <value>
                <fullName>Demographic - Lifestyle</fullName>
            </value>
            <value>
                <fullName>Demographic - Location</fullName>
            </value>
            <value>
                <fullName>Demographic - Marital Status</fullName>
            </value>
            <value>
                <fullName>Intent - Auto</fullName>
            </value>
            <value>
                <fullName>Intent - B2B</fullName>
            </value>
            <value>
                <fullName>Intent - Consumer Electronics</fullName>
            </value>
            <value>
                <fullName>Intent - Entertainment</fullName>
            </value>
            <value>
                <fullName>Intent - Finance</fullName>
            </value>
            <value>
                <fullName>Intent - Food</fullName>
            </value>
            <value>
                <fullName>Intent - Gaming</fullName>
            </value>
            <value>
                <fullName>Intent - IT/Computer</fullName>
            </value>
            <value>
                <fullName>Intent - Jobs</fullName>
            </value>
            <value>
                <fullName>Intent - News/Information</fullName>
            </value>
            <value>
                <fullName>Intent - Real Estate</fullName>
            </value>
            <value>
                <fullName>Intent - Shopping/Retail</fullName>
            </value>
            <value>
                <fullName>Intent - Sport</fullName>
            </value>
            <value>
                <fullName>Intent - Travel</fullName>
            </value>
            <value>
                <fullName>Interest - Auto</fullName>
            </value>
            <value>
                <fullName>Interest - B2B</fullName>
            </value>
            <value>
                <fullName>Interest - Consumer Electronics</fullName>
            </value>
            <value>
                <fullName>Interest - Entertainment</fullName>
            </value>
            <value>
                <fullName>Interest - Finance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>