Production/01-02-2025/force-app/main/default/objects/Account/fields/Data_Collection_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Collection_Type__c</fullName>
    <label>Data Collection Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consent</fullName>
            </value>
            <value>
                <fullName>Legitimate Interest</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>No Personal Data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>