Production/01-02-2025/force-app/main/default/objects/Account/fields/Data_Exploration__c.field-meta.xml
<CustomField>
    <fullName>Data_Exploration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Exploration</label>
    <type>Checkbox</type>
</CustomField>