Production/01-02-2025/force-app/main/default/objects/Account/fields/Data_Mapping_of_Segments__c.field-meta.xml
<CustomField>
    <fullName>Data_Mapping_of_Segments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Mapping of Segments</label>
    <type>Checkbox</type>
</CustomField>