Production/01-02-2025/force-app/main/default/objects/Account/fields/Data_Mapping_of_Segments_Date__c.field-meta.xml
<CustomField>
    <fullName>Data_Mapping_of_Segments_Date__c</fullName>
    <label>Data Mapping of Segments Date</label>
    <type>Date</type>
</CustomField>