Production/01-02-2025/force-app/main/default/objects/Account/fields/Data_Operations__c.field-meta.xml
<CustomField>
    <fullName>Data_Operations__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Data Operations Allocation</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts_DataOps</relationshipName>
    <type>Lookup</type>
</CustomField>