Production/01-02-2025/force-app/main/default/objects/Account/fields/Data_Origin_Web_Usage__c.field-meta.xml
<CustomField>
    <fullName>Data_Origin_Web_Usage__c</fullName>
    <label>Data Origin: Web Usage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>