Production/01-02-2025/force-app/main/default/objects/Account/fields/Data_Room__c.field-meta.xml
<CustomField>
    <fullName>Data_Room__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Room</label>
    <type>Checkbox</type>
</CustomField>