Production/01-02-2025/force-app/main/default/objects/Account/fields/Data_Room_Date__c.field-meta.xml
<CustomField>
    <fullName>Data_Room_Date__c</fullName>
    <label>Data Room Date</label>
    <type>Date</type>
</CustomField>