Production/01-02-2025/force-app/main/default/objects/Account/fields/Data_Supplier_Earnings_Report_Sent__c.field-meta.xml
<CustomField>
    <fullName>Data_Supplier_Earnings_Report_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>To be ticked by Account Manager once Earnings Report has been sent to Data Supplier</inlineHelpText>
    <label>Data Supplier Earnings Report Sent</label>
    <type>Checkbox</type>
</CustomField>