Production/01-02-2025/force-app/main/default/objects/Account/fields/Data_Supplier_Earnings_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Data_Supplier_Earnings_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>To be ticked once the monthly volumes file for each publisher have been added</inlineHelpText>
    <label>Data Supplier Earnings Uploaded</label>
    <type>Checkbox</type>
</CustomField>