Production/01-02-2025/force-app/main/default/objects/Account/fields/Data_Supplier_Holding_Group__c.field-meta.xml
<CustomField>
    <fullName>Data_Supplier_Holding_Group__c</fullName>
    <formula>IF( AND(RecordType.DeveloperName =&apos;Data_Supplier_Parent_Accout&apos;,Parent.Name!=null), Parent.Name ,
IF( AND(RecordType.DeveloperName =&apos;Data_Supplier_Parent_Accout&apos;,Parent.Name=null),  Name  ,
IF(AND(RecordType.DeveloperName =&apos;Publisher&apos;,Parent.Parent.Name!=null), Parent.Parent.Name ,
IF(AND(RecordType.DeveloperName =&apos;Publisher&apos;,Parent.Parent.Name=null),Parent.Name ,
IF( RecordType.DeveloperName =&apos;Data_Supplier_Holding_Group&apos;, Name ,&apos;N/A&apos;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Supplier Holding Group</label>
    <type>Text</type>
</CustomField>