Production/01-02-2025/force-app/main/default/objects/Account/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <label>Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Branded</fullName>
            </value>
            <value>
                <fullName>Non-Branded</fullName>
                <default>true</default>
                <label>Non-Branded</label>
            </value>
            <value>
                <fullName>Branded &amp; Non-Branded</fullName>
            </value>
            <value>
                <fullName>PDMP</fullName>
            </value>
            <value>
                <fullName>PDMP &amp; Branded</fullName>
            </value>
            <value>
                <fullName>PDMP, Branded &amp; Non-Branded</fullName>
            </value>
            <value>
                <fullName>PDMP &amp; Non-Branded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>