Production/01-02-2025/force-app/main/default/objects/Account/fields/Data_Validation_Qnaire_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Data_Validation_Qnaire_Completion_Date__c</fullName>
    <label>Data Validation Qnaire Completion Date</label>
    <type>Date</type>
</CustomField>