Production/01-02-2025/force-app/main/default/objects/Account/fields/Date_of_Last_Contact__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Contact__c</fullName>
    <label>Date of Last Contact</label>
    <type>Date</type>
</CustomField>