Production/01-02-2025/force-app/main/default/objects/Account/fields/Declared_Uniques__c.field-meta.xml
<CustomField>
    <fullName>Declared_Uniques__c</fullName>
    <label>Declared Uniques</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>