Production/01-02-2025/force-app/main/default/objects/Account/fields/Detailed_Due_to_Diligence_Ongoing__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Due_to_Diligence_Ongoing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Detailed Due to Diligence Ongoing</label>
    <type>Checkbox</type>
</CustomField>