Production/01-02-2025/force-app/main/default/objects/Account/fields/DMP_DSP_exclusions__c.field-meta.xml
<CustomField>
    <fullName>DMP_DSP_exclusions__c</fullName>
    <label>DMP/DSP exclusions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>