Production/01-02-2025/force-app/main/default/objects/Account/fields/DMP_File_Attachment__c.field-meta.xml
<CustomField>
    <fullName>DMP_File_Attachment__c</fullName>
    <label>File Attachment</label>
    <length>250</length>
    <type>Text</type>
</CustomField>