Production/01-02-2025/force-app/main/default/objects/Account/fields/DMP_User_Case__c.field-meta.xml
<CustomField>
    <fullName>DMP_User_Case__c</fullName>
    <label>DMP User Case</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>Measurement</fullName>
            </value>
            <value>
                <fullName>Modeling</fullName>
            </value>
            <value>
                <fullName>Targeting/Activation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>