Production/01-02-2025/force-app/main/default/objects/Account/fields/DPA_Received__c.field-meta.xml
<CustomField>
    <fullName>DPA_Received__c</fullName>
    <label>DPA Received</label>
    <type>Date</type>
</CustomField>