Production/01-02-2025/force-app/main/default/objects/Account/fields/Employment_Status_Sources__c.field-meta.xml
<CustomField>
    <fullName>Employment_Status_Sources__c</fullName>
    <label>Employment Status Sources</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Census Information</fullName>
            </value>
            <value>
                <fullName>Surveys</fullName>
            </value>
            <value>
                <fullName>Completed Forms</fullName>
            </value>
            <value>
                <fullName>Registrations. Business Directories and Networking Services</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>