Production/01-02-2025/force-app/main/default/objects/Account/fields/External_Stakeholders__c.field-meta.xml
<CustomField>
    <fullName>External_Stakeholders__c</fullName>
    <inlineHelpText>List of vendors, alliances and partners</inlineHelpText>
    <label>External Stakeholders</label>
    <type>TextArea</type>
</CustomField>