Production/01-02-2025/force-app/main/default/objects/Account/fields/FAQs__c.field-meta.xml
<CustomField>
    <fullName>FAQs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FAQs</label>
    <type>Checkbox</type>
</CustomField>