Production/01-02-2025/force-app/main/default/objects/Account/fields/FAQs_Date__c.field-meta.xml
<CustomField>
    <fullName>FAQs_Date__c</fullName>
    <label>FAQs Date</label>
    <type>Date</type>
</CustomField>