Production/01-02-2025/force-app/main/default/objects/Account/fields/ffbf__BankBIC__c.field-meta.xml
<CustomField>
    <fullName>ffbf__BankBIC__c</fullName>
    <label>Bank BIC</label>
    <length>16</length>
    <type>Text</type>
</CustomField>