Production/01-02-2025/force-app/main/default/objects/Account/fields/ffbf__PaymentCountryISO__c.field-meta.xml
<CustomField>
    <fullName>ffbf__PaymentCountryISO__c</fullName>
    <label>Payment Country ISO</label>
    <length>2</length>
    <type>Text</type>
</CustomField>