Production/01-02-2025/force-app/main/default/objects/Account/fields/ffbf__PaymentPriority__c.field-meta.xml
<CustomField>
    <fullName>ffbf__PaymentPriority__c</fullName>
    <label>Payment Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
            <value>
                <fullName>U</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>